syntax = "proto3";

package rate;

option go_package  = "./rate";

message RateReq {
	string unit = 1;
	string ip = 2;
}

message RateResp {
	double rate = 1;
}

service ExchangeRate {
	rpc usdRate(RateReq) returns (RateResp);
}